@@ -1,9 +1,9 @@
 /*-------------------------------------------------------------------------
-   isblank.c
+   aligned_alloc.c
 
    Philipp Klaus Krause, philipp@informatik.uni-frankfurt.de 2013
 
-   (c) 2013 Goethe-Universität Frankfurt
+   (c) 2015 Goethe-Universität Frankfurt
 
    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
@@ -28,13 +28,14 @@
    might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
 
+#pragma std_c11
+
+#include <stddef.h>
+
 /* it is important to declare this function extern before including
    the inline definition to give it external linkage */
-extern int isblank (int c);
 
-/* also include stdio.h before ctype.h here so ctype can perform a
-   _Static_assert on EOF */
-#include <stdio.h>
+extern void *aligned_alloc(size_t alignment, size_t size);
 
-#include <ctype.h>
+#include <stdlib.h>
 
